--- a/src/PortfolioPage/ProjectCard.module.css
+++ b/src/PortfolioPage/ProjectCard.module.css
@@ -50,3 +50,10 @@
     font-size:x-small;
     text-align: left;
 }
+
+.div4{
+    display: flex;
+    justify-content: center;
+    font-size:x-small;
+    text-align: left;
+}
